welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: not found: value prendreBiscuit
prendreBiscuit();
^Program:8: error: not found: value n
for(n <- 1 to n){
              ^